--- a/index.html
+++ b/index.html
@@ -14,38 +14,38 @@
         />
     </head>
     <body class="wall">
-        <div class="col-12 col-md-6 card">
-            <div class="row">
-                <div class="single">
-                    <h1>Join our community</h1>
-                    <p>30-day, hassie-free money back guarantee.</p>
+        <div class="white"></div>
+        <div class="aqua">
+            <div class="box1"></div>
+            <div class="box2"></div>
+        </div>
 
-                    <p>
-                        Gain access to our full library of tutorials along with
-                        expert code reviews. Perfect for any developers who are
-                        serious about honing their skills.
-                    </p>
-                </div>
-                <div class="information">
-                    <div class="col-12 col-md-6">
-                        <h3>Monthly Subscription</h3>
-                        <p>$29 per month</p>
-                        <p>full access for less than $1 a day</p>
-                        <a href="#"></a>
-                    </div>
-                </div>
+        <div class="single">
+            <h1>Join our community</h1>
+            <p>30-day, hassie-free money back guarantee.</p>
 
-                <div class="why-us">
-                    <div class="col-12 col-md-6">
-                        <h3>Why Us</h3>
-                        <p>
-                            Tutorials by industry experts Peer & expert code
-                            review Coding exercises Access to our GitHub repos
-                            Community forum Flashcard decks New videos every
-                            week.
-                        </p>
-                    </div>
-                </div>
+            <p>
+                Gain access to our full library of tutorials along with expert
+                code reviews. Perfect for any developers who are serious about
+                honing their skills.
+            </p>
+        </div>
+
+        <div class="row card">
+            <div class="information">
+                <h3>Monthly Subscription</h3>
+                <p>$29 per month</p>
+                <p>full access for less than $1 a day</p>
+                <a href="#"></a>
+            </div>
+
+            <div class="why-us">
+                <h3>Why Us</h3>
+                <p>
+                    Tutorials by industry experts Peer & expert code review
+                    Coding exercises Access to our GitHub repos Community forum
+                    Flashcard decks New videos every week.
+                </p>
             </div>
         </div>
     </body>
