--- a/index.html
+++ b/index.html
@@ -14,17 +14,12 @@
         />
     </head>
     <body class="wall">
-        <div class="white"></div>
-        <div class="aqua">
-            <div class="box1"></div>
-            <div class="box2"></div>
-        </div>
-
         <div class="single">
-            <h1>Join our community</h1>
-            <p>30-day, hassie-free money back guarantee.</p>
+            <h2 class="join">Join our community</h2>
 
-            <p>
+            <h3 class="day">30-day, hassie-free money back guarantee.</h3>
+
+            <p class="text">
                 Gain access to our full library of tutorials along with expert
                 code reviews. Perfect for any developers who are serious about
                 honing their skills.
@@ -33,15 +28,19 @@
 
         <div class="row card">
             <div class="information">
-                <h3>Monthly Subscription</h3>
-                <p>$29 per month</p>
-                <p>full access for less than $1 a day</p>
-                <a href="#"></a>
+                <h3 class="title">Monthly Subscription</h3>
+
+                <p class="text"><bold class="bold">$29</bold> per month</p>
+
+                <p class="txt">full access for less than $1 a day</p>
+
+                <a class="btn" href="#">single Up</a>
             </div>
 
             <div class="why-us">
-                <h3>Why Us</h3>
-                <p>
+                <h3 class="title">Why Us</h3>
+
+                <p class="txt">
                     Tutorials by industry experts Peer & expert code review
                     Coding exercises Access to our GitHub repos Community forum
                     Flashcard decks New videos every week.
